# text-adventure-game

./: .gitignore  CMakeLists.txt  README.md  TODO.md  game_logic.py  main.cpp
scripts/: game_logic.py
